# nextplayer

./: .editorconfig  .gitignore  Gemfile  PRIVACY  README.md  build.gradle  build.gradle.kts  commit_message.txt  gradle.properties  settings.gradle  settings.gradle.kts
.bundle/: config
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  ci-gradle.properties
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android_build.yaml  bump-version.yaml  bump_version.yaml  github_release.yaml  publish.yaml  update_version_and_publish.yaml
.superpowers/sdd/: task-1-report.md
app/: build.gradle  build.gradle.kts  debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml  baseline-prof.txt
benchmarks/: build.gradle.kts
benchmarks/src/main/: AndroidManifest.xml
build-logic/convention/: build.gradle.kts
core/common/: build.gradle.kts
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/datastore/: build.gradle.kts
core/domain/: build.gradle.kts
core/media/: build.gradle.kts
core/model/: build.gradle.kts
core/notification/: build.gradle.kts
core/remotesubs/: build.gradle.kts
core/ui/: build.gradle.kts
docs/: wmv.md
docs/superpowers/plans/: 2026-07-13-local-audio-tracks.md  2026-07-16-sftp-ssh-key-auth.md  2026-07-17-issue-1809-storage-permission-crash.md  2026-07-18-mediastore-permission-crash.md  2026-07-19-finished-video-progress.md  2026-07-19-issue-1821-single-selection-autoplay.md  2026-07-20-issue-1828-crash-log-clipboard.md  2026-07-20-issue-1830-vault-sorting.md  2026-07-20-mediastore-write-request-limit.md
docs/superpowers/specs/: 2026-07-13-local-audio-tracks-design.md  (+6 more)
fastlane/: Appfile  Fastfile  README.md
feature/iptv/: build.gradle.kts
feature/network/: build.gradle.kts
feature/player/: DECODER_SWITCHING.md  build.gradle.kts
feature/settings/: build.gradle.kts
feature/videopicker/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libs/ffcodecs/: .gitignore  build.gradle.kts
nextlib/ffcodecs/: build.gradle.kts  consumer-rules.pro
nextlib/ffcodecs/src/main/cpp/: CMakeLists.txt  ffaudio.cpp  ffcodecs.cpp  ffcommon.cpp  ffcommon.h  ffmain.cpp  ffvideo.cpp
nextlib/ffmpeg/: setup.sh
(+866 files in other folders)
